--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
               </button>
             </form>
            </div>
+           <!-- МОДАЛЬНОЕ ОКНО -->
            <div data-modal class="backdrop is-hidden">
             <form class="modal-form" action="#">
               <button data-modal-close class="close-btn close-modal-btn" type="button">
