--- a/index.html
+++ b/index.html
@@ -19,8 +19,20 @@
           <a class="logo link-logo" href="index.html">
             <span class="logo-color">Web </span>Studio
           </a>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
 
-          <ul class="menu list">
+          <!-- <ul class="menu list">
             <li class="menu-list-item list">
               <a class="menu-link link menu-link-studio" href="./index.html">Студия</a>
             </li>
@@ -31,10 +43,10 @@
               <a class="menu-link link" href="">Контакты</a>
             </li>
           </ul>
-        </nav>
+        </nav> -->
 
         <!--Контакты-->
-        <ul class="header-adress">
+        <!-- <ul class="header-adress">
           <li class="header-adress-list list">
             <a class="header-adress-link link" href="mailto:info@devstudio.com">
               <svg class="header-adress-mail-svg">
@@ -53,9 +65,9 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <!--Герой-->
-    <main class="main">
+    <!-- <main class="main">
       <section class="hero-section">
         <div class="hero-wrapper-box">
           <div class="hero-wrapper container">
@@ -66,11 +78,11 @@
             <button data-modal-open class="btn-hero">Заказать услугу</button>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!--"Преймущества" -->
 
-      <section class="benefits">
+      <!-- <section class="benefits">
         <div class="container">
           <ul class="list-benefits list">
             <li class="list-item-benefits">
@@ -115,10 +127,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--Чем мы занимаемся - about Us-->
-      <section class="about-us">
+      <!-- <section class="about-us">
         <div class="container">
           <h2 class="title-abaut-us title">Чем мы занимаемся</h2>
           <ul class="about-us-list list">
@@ -136,7 +148,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--Команда-->
       <section class="team">
